--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <div id="xl_auth" style="width: 100%; height: 1000px"></div>
 
 <script type="application/javascript">
+    import { Widget } from '@xsolla/login-sdk';
+
     const s = document.createElement("script");
     s.type = "text/javascript";
     s.async = true;
